[gd_scene load_steps=5 format=3 uid="uid://jy2ksiptdm5o"]

[ext_resource type="Script" path="res://scripts/disk.gd" id="1_dpac0"]
[ext_resource type="Texture2D" uid="uid://de2uajha5jdah" path="res://graphics/red_dot.png" id="2_nlp77"]
[ext_resource type="PackedScene" uid="uid://8vmyw1ef2ts5" path="res://scenes/NameEntry.tscn" id="3_m6pxm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_httaq"]
radius = 108.19

[node name="Disk" type="Area2D"]
scale = Vector2(0.15, 0.15)
script = ExtResource("1_dpac0")

[node name="PlayerName" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -380.0
offset_top = 97.0
offset_right = 380.0
offset_bottom = 280.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_nlp77")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_httaq")

[node name="LineEdit" parent="." instance=ExtResource("3_m6pxm")]
visible = false
scale = Vector2(1, 1)

[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
